--- a/src/gmp/mp-h.in
+++ b/src/gmp/mp-h.in
@@ -1,7 +1,7 @@
 /* mp-h.in -- Definitions for the GNU multiple precision library  -*-mode:c-*-
    BSD mp compatible functions.
 
-Copyright 1991, 1993, 1994, 1995, 1996, 2000, 2001, 2002 Free Software
+Copyright 1991, 1993, 1994, 1995, 1996, 2000, 2001, 2002, 2004 Free Software
 Foundation, Inc.
 
 This file is part of the GNU MP Library.
@@ -39,7 +39,7 @@ MA 02111-1307, USA. */
 #undef __need_size_t
 
 /* The following instantiated by configure, for internal use only */
-#if ! __GMP_WITHIN_CONFIGURE
+#if ! defined (__GMP_WITHIN_CONFIGURE)
 @DEFN_LONG_LONG_LIMB@
 #define __GMP_LIBGMP_DLL  @LIBGMP_DLL@
 #endif
@@ -69,7 +69,11 @@ MA 02111-1307, USA. */
 #define __gmp_signed
 #endif
 
-#if defined (__GNUC__) || defined (_MSC_VER) || defined (__BORLANDC__)
+#if defined (__GNUC__)
+#define __GMP_DECLSPEC_EXPORT  __declspec(__dllexport__)
+#define __GMP_DECLSPEC_IMPORT  __declspec(__dllimport__)
+#endif
+#if defined (_MSC_VER) || defined (__BORLANDC__)
 #define __GMP_DECLSPEC_EXPORT  __declspec(dllexport)
 #define __GMP_DECLSPEC_IMPORT  __declspec(dllimport)
 #endif
@@ -92,7 +96,7 @@ MA 02111-1307, USA. */
 #define __GMP_DECLSPEC
 #endif
 
-#ifdef _SHORT_LIMB
+#ifdef __GMP_SHORT_LIMB
 typedef unsigned int		mp_limb_t;
 typedef int			mp_limb_signed_t;
 #else
