--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -7,10 +7,14 @@ srcdir	= @srcdir@
 # Programs used by "make":
 #
 
+@SET_MAKE@
 CC	= @ECL_CC@
-LIBS	= @STATICLIBS@ @LIBS@ @TKLIBS@ @CLIBS@
+LIBS	= @LIBS@
+FASL_LIBS = @FASL_LIBS@
+CORE_LIBS = @CORE_LIBS@
 LDFLAGS	= @LDFLAGS@
 RM	= @RM@
+LN_S	= @LN_S@
 EXE	= @EXEEXT@
 
 # ==================== Where To Install Things ====================
@@ -35,7 +39,7 @@ mkinstalldirs = $(SHELL) $(top_srcdir)/gc/mkinstalldirs
 
 # Files
 
-SUBDIR = @SUBDIR@
+SUBDIRS = @SUBDIRS@
 LIBRARIES = @LIBRARIES@
 LSP_LIBRARIES = @LSP_LIBRARIES@
 ECL_MODULES = @ECL_MODULES@
@@ -58,7 +62,7 @@ ecl_min$(EXE): $(LIBRARIES) .gdbinit @LIBPREFIX@eclmin.@LIBEXT@
 	if [ -f CROSS-COMPILER ]; then \
 		touch $@; \
 	else \
-		$(CC) $(LDFLAGS) -o $@ cinit.o c/all_symbols.o -L./ @LIBPREFIX@eclmin.@LIBEXT@ $(LIBS);\
+		$(CC) $(LDFLAGS) -o $@ cinit.o c/all_symbols.o -L./ @LIBPREFIX@eclmin.@LIBEXT@ $(CORE_LIBS) $(LIBS) $(FASL_LIBS);\
 	fi
 
 .gdbinit: $(srcdir)/util/gdbinit
@@ -69,64 +73,62 @@ lsp/config.lsp: lsp/config.pre
 compile.lsp: compile.pre
 	sed -e 's,@ecldir@,$(libdir),g' < compile.pre > compile.lsp
 ecl-config: ecl-config.pre
-	sed -e 's,~A,$(libdir),;s,~\*,,' \
-	    -e 's,@libdir\\@,$(libdir),' \
+	sed -e 's,@libdir\\@,$(libdir),' \
 	    -e 's,@includedir\\@,$(libdir)/h,' ecl-config.pre > ecl-config
 
 
 @LIBPREFIX@eclmin.@LIBEXT@: @LIBPREFIX@eclgmp.@LIBEXT@ @LIBPREFIX@eclgc.@LIBEXT@ lsp/config.lsp
 	cd c; $(MAKE)
 @LIBPREFIX@eclgc.@LIBEXT@:
-	if (echo $(SUBDIR) | grep gc); then \
+	if (echo $(SUBDIRS) | grep gc); then \
 	  cd gc; $(MAKE) install; \
 	  cp -rf $(srcdir)/gc/include/private ../h/gc/; \
 	  mv ../@LIBPREFIX@gc.@LIBEXT@ ../@LIBPREFIX@eclgc.@LIBEXT@; \
 	fi
 @LIBPREFIX@eclgmp.@LIBEXT@:
-	if (echo $(SUBDIR) | grep gmp); then \
+	if (echo $(SUBDIRS) | grep gmp); then \
 	  cd gmp; $(MAKE) install; \
 	  mv ../@LIBPREFIX@gmp.@LIBEXT@ ../@LIBPREFIX@eclgmp.@LIBEXT@; \
 	fi
 sysfun.lsp:
-	ln -s -f $(srcdir)/cmp/sysfun.lsp ./
+	$(LN_S) $(srcdir)/cmp/sysfun.lsp ./
 
 rt.lisp:
 	cp $(srcdir)/../contrib/rt/rt.lisp ./
 
 BUILD-STAMP: config.status
-	(echo "#"; uname -a) > $@
-	head -8 config.status | tail -6 >> $@
+	echo "#" `uname -a` > $@
+	head -8 config.log | tail -6 >> $@
 install: BUILD-STAMP install-base
 	cd c; $(MAKE) prefix=$(prefix) install
 	cd doc; $(MAKE) prefix=$(prefix) install
 install-base:
-	$(mkinstalldirs) $(bindir) $(libdir)/h
+	$(mkinstalldirs) $(DESTDIR)$(bindir) $(DESTDIR)$(libdir)/h
 	for i in $(TARGETS); do \
-	  $(INSTALL) -s $$i $(bindir); \
+	  $(INSTALL_PROGRAM) -s $$i $(DESTDIR)$(bindir); \
 	done;
-	$(INSTALL_SCRIPT) ecl-config $(bindir)
+	$(INSTALL_SCRIPT) ecl-config $(DESTDIR)$(bindir)
 	for i in BUILD-STAMP $(LSP_LIBRARIES) $(LIBRARIES) c/dpp* help.doc ; do \
-	  $(INSTALL_DATA) $$i $(libdir); \
+	  $(INSTALL_DATA) $$i $(DESTDIR)$(libdir); \
 	done
 	for i in $(ECL_MODULES); do \
-	  $(INSTALL_DATA) $$i.fas $(libdir); \
+	  $(INSTALL_DATA) $$i.fas $(DESTDIR)$(libdir); \
 	done
-	$(INSTALL_DATA) h/config.h $(libdir)/h
 flatinstall: BUILD-STAMP
 	$(MAKE) bindir=$(prefix) libdir=$(prefix) install-base
 	cd c; $(MAKE) prefix=$(prefix) flatinstall
 	cd doc; $(MAKE) prefix=$(prefix) docdir=$(prefix)/doc flatinstall
 
 uninstall:
-	for i in $(TARGETS) ecl-config; do rm -rf $(bindir)/$$i; done
-	rm -rf $(libdir)
+	for i in $(TARGETS) ecl-config; do $(RM) $(DESTDIR)$(bindir)/$$i; done
+	$(RM) -r $(DESTDIR)$(libdir)
 	cd doc; $(MAKE) uninstall
 
 doc: $(TARGETS)
 	cd doc; $(MAKE)
 
 clean: clean_lisp
-	for i in ${SUBDIR}; do (cd $$i; $(MAKE) clean); done
+	for i in $(SUBDIRS); do (cd $$i; $(MAKE) clean); done
 	$(RM) ecl_min$(EXE) ecl$(EXE) help.doc core a.out
 	$(RM) config.version config.log config.cache
 	$(RM) *.c *.o *.a *.h *.data *.fas
