--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -9,7 +9,7 @@ VPATH	= @srcdir@
 #
 TRUE_CC = @CC@
 CC	= @CC@
-CFLAGS	= -c -I./ -I$(srcdir) -I$(HDIR) -I../h @BOEHM_HEADERS@ @CFLAGS@ @ECL_CFLAGS@ \
+CFLAGS	= -c -I./ -I$(srcdir) -I$(HDIR) -I../h @CPPFLAGS@ @CFLAGS@ @ECL_CFLAGS@ \
 #	  -Wall -W -Wfloat-equal -Wundef -Wendif-labels -Wpointer-arith -Wcast-align \
 #	  -Wwrite-strings -Wconversion -Wsign-compare -Wmissing-prototypes -Wredundant-decls \
 #	  -Wunreachable-code -Winline
@@ -18,6 +18,7 @@ SHELL	= /bin/sh
 RM	= @RM@
 EXE	= @EXEEXT@
 DPP	= ./dpp$(EXE)
+RANLIB	= @RANLIB@
 
 # Data for installation
 #
@@ -68,23 +69,23 @@ external.h: $(top_srcdir)/h/external.h
 	sed 's,__declspec(dllimport),,g' $(top_srcdir)/h/external.h > $@
 
 install: $(HFILES)
-	for i in $(HFILES); do $(INSTALL_DATA) $$i $(libdir)/h/; done
+	for i in $(HFILES); do $(INSTALL_DATA) $$i $(DESTDIR)$(libdir)/h/; done
 	sed '/-CUT-/,$$d' ../h/config.h > ../h/config-install.h
-	$(INSTALL_DATA) ../h/*.h $(libdir)/h/
-	rm $(libdir)/h/config.h
-	mv $(libdir)/h/config-install.h $(libdir)/h/config.h
+	$(INSTALL_DATA) ../h/*.h $(DESTDIR)$(libdir)/h/
+	rm $(DESTDIR)$(libdir)/h/config.h
+	mv $(DESTDIR)$(libdir)/h/config-install.h $(libdir)/h/config.h
 
 flatinstall: $(HFILES)
-	for i in $(HFILES); do $(INSTALL_DATA) $$i $(prefix)/h/; done
+	for i in $(HFILES); do $(INSTALL_DATA) $$i $(DESTDIR)$(prefix)/h/; done
 	sed '/-CUT-/,$$d' ../h/config.h > ../h/config-install.h
-	$(INSTALL_DATA) ../h/*.h $(prefix)/h/
-	rm $(prefix)/h/config.h
-	mv $(prefix)/h/config-install.h $(prefix)/h/config.h
+	$(INSTALL_DATA) ../h/*.h $(DESTDIR)$(prefix)/h/
+	rm $(DESTDIR)$(prefix)/h/config.h
+	mv $(DESTDIR)$(prefix)/h/config-install.h $(prefix)/h/config.h
 
 ../libeclmin.a: $(OBJS) all_symbols.o all_symbols2.o
 	$(RM) $@
 	ar cr $@ $(OBJS)
-	ranlib $@
+	$(RANLIB) $@
 
 clean:
 	$(RM) dpp *.c *.h $(OBJS) ../libecl.a cinit.o core a.out
